# mutantr

./: .Rbuildignore  .gitignore  .roborev.toml  DESCRIPTION  LICENSE  NAMESPACE  README.md
.opencode/plans/: mutantr-batch.md  render-outcome-helper.md  unviable-classification.md
.opencode/plans/mutantr-batch/: AC-cli-binary.md  AC-config-file.md  AC-function-body.md  AC-in-diff.md  AC-iterate.md  AC-numeric-constant.md
.opencode/plans/render-outcome-helper/: AC-1.md
.opencode/plans/unviable-classification/: AC-1.md
.opencode/traces/: 2026-06-21-render-outcome-helper.jsonl  2026-06-21-unviable-classification.jsonl  2026-06-22-mutantr-batch.jsonl
R/: cli.R  config.R  diff_filter.R  extendr-wrappers.R  mutate_test.R
docs/adr/: 0001-inline-mutant-engine.md
man/: mutant_apply.Rd  mutant_classify_outcome.Rd  mutant_prepare_all.Rd  mutant_scan_file.Rd  mutant_scan_package.Rd  mutant_scan_source.Rd  mutate_test.Rd
src/: .gitignore  Makevars.in  Makevars.win.in  entrypoint.c  mutantr-win.def
src/rust/: Cargo.toml
src/rust/src/: lib.rs
src/rust/src/mutant/: error.rs  mod.rs  mutate.rs  operators.rs  package.rs  scanner.rs  types.rs
src/rust/tests/: integration.rs
tests/: check_archive_cleanup.sh  check_ignore_rules.sh  check_self_contained.sh  testthat.R
tests/testthat/: test-classify.R  test-cli.R  test-config.R  test-diff_filter.R  test-iterate.R  test-mutate_test.R
tools/: verify_build.R
