[package]
name = 'rmutant'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = ['staticlib', 'rlib']
name = 'rmutant'

[dependencies]
extendr-api = '0.8.1'
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
